apps/argocd/resources/webhook-bridge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-bridge
  namespace: argocd
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: webhook-bridge
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: argocd
        app.kubernetes.io/name: webhook-bridge
    spec:
      containers:
      - name: wekhook-bridge
        image: ghcr.io/alexkar598/webhook-bridge:sha-dd4f1eb@sha256:978984229a5c958b8312fbf8b5d4dcef305f56a01de368d217511bc7224ab1b6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: webhook
          protocol: TCP
