apps/argocd/resources/webhook-bridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-bridge
  namespace: argocd
spec:
  ports:
  - name: webhook
    protocol: TCP
    port: 8080
    targetPort: webhook
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: webhook-bridge
  type: ClusterIP
