apps/argocd/resources/webhook-bridge/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: webhook-bridge
  name: webhook-bridge
  namespace: argocd
spec:
  hostnames:
    - argocd.engiqueersconcordia.ca
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: engiqueers
      namespace: ingress
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: webhook-bridge
          port: 8080
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /api/webhook
      matches:
        - path:
            type: PathPrefix
            value: /api/applicationset-webhook
