apps/argocd/resources/webhook-bridge/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webhook-bridge-argocd-applicationset-controller
  namespace: argocd
spec:
  ingress:
  - ports:
      - port: webhook
    from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: webhook-bridge
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-applicationset-controller
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webhook-bridge
  namespace: argocd
spec:
  ingress:
    - ports:
        - port: webhook
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: webhook-bridge
  policyTypes:
    - Ingress
